--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,19 @@
 version: 2.1
 
+orbs:
+  node: circleci/node@5.2.0
+
 jobs:
-  checkoutAndTest:
+  checkoutEtTests:
     docker:
       - image: cimg/node:17.4.0
     steps:
-      - checkout
-      - run: node --version
-      - run: npm --version
-      - run: npm install
-      - run: npm run test
+      - run : git clone https://github.com/gwerobe/ex2-backend.git
+      - run : cd ex2-backend
+      - run : npm install
+      - run : npm run test
+
 workflows:
   build:
     jobs:
-      - checkoutAndTest
+      - checkoutEtTests
