--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - run : git clone https://github.com/gwerobe/ex2-backend.git
       - run : ls -al
       - run : cd ex2-backend
+      - run : ls -al 
       - run : npm install
       - run : npm run test
 
