--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,9 @@ jobs:
       - run : git clone https://github.com/gwerobe/ex2-backend.git
       - run : ls -al
       - run : cd ex2-backend/
-      - run : ls -al 
+      - run : ls -al
+        working_directory: ex2-backend
+      - node/install
       - run : npm install
       - run : npm run test
 
