--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - tp2-backend
+            - Exercice2
 
 workflows:
   build:
